--- a/package.json
+++ b/package.json
@@ -1,49 +1,29 @@
 {
-  "name": "personal-site",
-  "private": true,
+  "name": "rsvp",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "script": "node scripts/run.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "@apollo/client": "^3.5.6",
-    "@emotion/react": "^11.9.3",
-    "@fullhuman/postcss-purgecss": "^4.1.3",
-    "@headlessui/react": "^1.4.2",
-    "@heroicons/react": "^1.0.5",
-    "@mdx-js/loader": "^2.1.1",
-    "@next/mdx": "^12.1.6",
-    "directory-tree": "^3.3.0",
-    "graphql": "^16.2.0",
-    "gray-matter": "^4.0.3",
-    "lodash": "^4.17.21",
-    "next": "12.0.7",
-    "next-translate": "^1.4.0",
-    "parse-numeric-range": "^1.3.0",
-    "purgecss": "^4.1.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-markdown": "^8.0.3",
-    "react-player": "^2.9.0",
-    "react-social-icons": "^5.6.1",
-    "react-syntax-highlighter": "^15.5.0",
-    "rehype-raw": "^6.1.1",
-    "remark-gfm": "^3.0.1",
-    "typescript": "^4.7.3"
-  },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@tailwindcss/forms": "^0.5.2",
-    "@tailwindcss/typography": "^0.5.2",
-    "autoprefixer": "^10.4.0",
-    "cssnano": "^5.1.12",
-    "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7",
-    "eslint-config-prettier": "^8.5.0",
-    "postcss": "^8.2.15",
-    "prettier": "^2.6.2",
-    "tailwindcss": "^3.0.2"
+    "@ethersproject/abi": "^5.4.7",
+    "@ethersproject/providers": "^5.4.7",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^1.0.1",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.0.0",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
+    "chai": "^4.2.0",
+    "ethers": "^5.4.7",
+    "hardhat": "^2.10.2",
+    "hardhat-gas-reporter": "^1.0.8",
+    "solidity-coverage": "^0.7.21",
+    "typechain": "^8.1.0"
   }
 }
